--- a/contacts.html
+++ b/contacts.html
@@ -55,22 +55,10 @@
                                             <a class="intagram" target="_blank">
                                                 <div class="change-icons">
                                                     <div class="change-icon">
-                                                        <img src="/img/Ellipse (2).png" alt="Instagram"/>
+                                                        <img src="./img/Ellipse (2).png" alt="Instagram"/>
                                                     </div>
                                                     <div class="change-icon">
-                                                        <img src="/img/Ellipse (1).png" alt="Instagram"/>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="" target="_blank">
-                                                <div class="change-icons">
-                                                    <div class="change-icon">
-                                                        <img src="/img/Group 1.png" alt="Twitter"/>
-                                                    </div>
-                                                    <div class="change-icon">
-                                                        <img src="/img/Ellipse (5).png" alt="Twitter"/>
+                                                        <img src="./img/Ellipse (1).png" alt="Instagram"/>
                                                     </div>
                                                 </div>
                                             </a>
@@ -79,10 +67,22 @@
                                             <a href="" target="_blank">
                                                 <div class="change-icons">
                                                     <div class="change-icon">
-                                                        <img src="/img/Ellipse (3).png" alt="Facebook"/>
+                                                        <img src="./img/Group 1.png" alt="Twitter"/>
                                                     </div>
                                                     <div class="change-icon">
-                                                        <img src="/img/Group 1 (1).png" alt="Facebook"/>
+                                                        <img src="./img/Ellipse (5).png" alt="Twitter"/>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="" target="_blank">
+                                                <div class="change-icons">
+                                                    <div class="change-icon">
+                                                        <img src="./img/Ellipse (3).png" alt="Facebook"/>
+                                                    </div>
+                                                    <div class="change-icon">
+                                                        <img src="./img/Group 1 (1).png" alt="Facebook"/>
                                                     </div>
                                                 </div>
                                             </a>
@@ -91,10 +91,10 @@
                                 <a class="" target="_blank">
                                 <div class="change-icons">
                                     <div class="change-icon">
-                                        <img src="/img/Ellipse (4).png" alt="Linkedin"/>
+                                        <img src="./img/Ellipse (4).png" alt="Linkedin"/>
                                     </div>
                                     <div class="change-icon">
-                                        <img src="/img/Group 1 (2).png" alt="Linkedin"/>
+                                        <img src="./img/Group 1 (2).png" alt="Linkedin"/>
                                     </div>
                                 </div>
                                 </a>
