--- a/portfolio.html
+++ b/portfolio.html
@@ -46,47 +46,47 @@
                 </ul>  
                 <ul>
                     <li>
-                        <img src="/img/img (1).png" alt="Технокряк">
+                        <img src="./img/img (1).png" alt="Технокряк">
                         <h3>Технокряк</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="/img/img (2).png" alt="Постер New Orlean vs Golden Star">
+                        <img src="./img/img (2).png" alt="Постер New Orlean vs Golden Star">
                         <h3>Постер New Orlean vs Golden Star</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="/img/img (3).png" alt="Ресторан Seafood">
+                        <img src="./img/img (3).png" alt="Ресторан Seafood">
                         <h3>Ресторан Seafood</h3>
                         <p>Додаток</p>
                     </li>
                     <li>
-                        <img src="/img/img (4).png" alt="Проєкт Prime">
+                        <img src="./img/img (4).png" alt="Проєкт Prime">
                         <h3>Проєкт Prime</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="/img/img (5).png" alt="Проєкт Boxes">
+                        <img src="./img/img (5).png" alt="Проєкт Boxes">
                         <h3>Проєкт Boxes</h3>
                         <p>Додаток</p>
                     </li>
                     <li>
-                        <img src="/img/img (6).png" alt="Inspiration has no Borders">
+                        <img src="./img/img (6).png" alt="Inspiration has no Borders">
                         <h3>Inspiration has no Borders</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="/img/img (7).png" alt="Видання Limited Edition">
+                        <img src="./img/img (7).png" alt="Видання Limited Edition">
                         <h3>Видання Limited Edition</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="/img/img (8).png" alt="Проєкт LAB">
+                        <img src="./img/img (8).png" alt="Проєкт LAB">
                         <h3>Проєкт LAB</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="/img/img (9).png" alt="Growing Business">
+                        <img src="./img/img (9).png" alt="Growing Business">
                         <h3>Growing Business</h3>
                         <p>Додаток</p>
                     </li>
@@ -112,22 +112,10 @@
                                             <a class="intagram" target="_blank">
                                                 <div class="change-icons">
                                                     <div class="change-icon">
-                                                        <img src="/img/Ellipse (2).png" alt="Instagram"/>
+                                                        <img src="./img/Ellipse (2).png" alt="Instagram"/>
                                                     </div>
                                                     <div class="change-icon">
-                                                        <img src="/img/Ellipse (1).png" alt="Instagram"/>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="" target="_blank">
-                                                <div class="change-icons">
-                                                    <div class="change-icon">
-                                                        <img src="/img/Group 1.png" alt="Twitter"/>
-                                                    </div>
-                                                    <div class="change-icon">
-                                                        <img src="/img/Ellipse (5).png" alt="Twitter"/>
+                                                        <img src="./img/Ellipse (1).png" alt="Instagram"/>
                                                     </div>
                                                 </div>
                                             </a>
@@ -136,10 +124,22 @@
                                             <a href="" target="_blank">
                                                 <div class="change-icons">
                                                     <div class="change-icon">
-                                                        <img src="/img/Ellipse (3).png" alt="Facebook"/>
+                                                        <img src="./img/Group 1.png" alt="Twitter"/>
                                                     </div>
                                                     <div class="change-icon">
-                                                        <img src="/img/Group 1 (1).png" alt="Facebook"/>
+                                                        <img src="./img/Ellipse (5).png" alt="Twitter"/>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="" target="_blank">
+                                                <div class="change-icons">
+                                                    <div class="change-icon">
+                                                        <img src="./img/Ellipse (3).png" alt="Facebook"/>
+                                                    </div>
+                                                    <div class="change-icon">
+                                                        <img src="./img/Group 1 (1).png" alt="Facebook"/>
                                                     </div>
                                                 </div>
                                             </a>
@@ -148,10 +148,10 @@
                                 <a class="" target="_blank">
                                 <div class="change-icons">
                                     <div class="change-icon">
-                                        <img src="/img/Ellipse (4).png" alt="Linkedin"/>
+                                        <img src="./img/Ellipse (4).png" alt="Linkedin"/>
                                     </div>
                                     <div class="change-icon">
-                                        <img src="/img/Group 1 (2).png" alt="Linkedin"/>
+                                        <img src="./img/Group 1 (2).png" alt="Linkedin"/>
                                     </div>
                                 </div>
                                 </a>
