--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </li>
                         <li>
                             <div class="worker-box">
-                                <img class="workerimage" src="/img/img (1).jpg" alt="Ольга Рєпіна">
+                                <img class="workerimage" src="./img/img (1).jpg" alt="Ольга Рєпіна">
                                 <h3 class="workername">Ольга Рєпіна</h3>
                                 <p class="profession">Frontend Developer</p>
                                 <div class="social_medias">
@@ -263,7 +263,7 @@
                         </li>
                         <li>
                             <div class="worker-box">
-                                <img class="workerimage" src="/img/img (2).jpg" alt="Микола Тарасов">
+                                <img class="workerimage" src="./img/img (2).jpg" alt="Микола Тарасов">
                                 <h3 class="workername">Микола Тарасов</h3>
                                 <p class="profession">Marketing</p>
                                 <div class="social_medias">
@@ -323,7 +323,7 @@
                         </li>
                         <li>
                             <div class="worker-box">
-                                <img class="workerimage" src="/img/img (4).jpg" alt="Михайло Єрмаков">
+                                <img class="workerimage" src="./img/img (4).jpg" alt="Михайло Єрмаков">
                                 <h3 class="workername">Михайло Єрмаков</h3>
                                 <p class="profession">UI Designer</p>
                                 <div class="social_medias">
