--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <title>WebStudio</title>
         <link rel="stylesheet" href="/css/style.css"/>
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- HEADER -->
         <header class="header">
                 <a class="logo" href="index.html">
-                    <div>
+                    <div class="header__logo">
                         <span class="web">Web</span>
                         <span class="studio">Studio</span>
                     </div>
