--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <body>
         <!-- HEADER -->
         <header class="header">
+            <div class="container">
                 <a class="header__logo" href="index.html">
                     WebStudio
                 </a>
@@ -31,29 +32,25 @@
                 </ul>    
             </nav>
                 <ul class="contacts__list">
-                    <li class="contacts__list__item">
-                            <a class="contacts__list__link" href="mailto:info@devstudio.com" class="header__mail header__contacts__item">
-                                info@devstudio.com
-                            </a>
-                    </li>
-                    <li class="contacts__list__item">
-                            <a class="contacts__list__link" href="tel:+380961111111" class="header__tel header__contacts__item">
-                                +38 096 111 11 11
-                            </a>                        
-                    </li>
-                </ul>     
+                    <li class="contacts__list__item"><a class="contacts__list__link" href="mailto:info@devstudio.com" class="header__mail header__contacts__item">info@devstudio.com</a></li>
+                    <li class="contacts__list__item"><a class="contacts__list__link" href="tel:+380961111111" class="header__tel header__contacts__item">+38 096 111 11 11</a></li>
+                </ul>    
+            </div>  
             <div class="header__line"></div>
         </header>
         <main>
             <!-- HERO -->
-            <section class="hero">    
+            <section class="hero">
+                <div class="container">
                     <h1 class="hero__title">
                         Ефективні рішення для<br> вашого бізнесу
                     </h1>
                     <button class="order__button" name="button">Замовити послугу</button> 
+                </div>  
             </section>
             <!-- FEATURES -->
             <section class="features">
+                <div class="container">
                     <ul class="features__list">
                         <li class="features__list__item">
                             <h3 class="features__list__title">Увага до деталей</h3>
@@ -72,10 +69,12 @@
                             <p class="features__list__description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
                     </ul>
+                </div>
             </section>
             <!-- WHAT WE DO -->
             <section class="work">
-                <h2 class="work__title">Чим ми займаємося</h2>                    
+                <div class="container">
+                    <h2 class="work__title">Чим ми займаємося</h2>                    
                     <ul class="work__list">
                         <li class="work__list__item">
                             <img class="work__list__img" src="./img/whatwedo1.png" alt="Чим ми займаємося">
@@ -87,44 +86,49 @@
                             <img class="work__list__img" src="./img/whatwedo3.png" alt="Чим ми займаємося">
                         </li>
                     </ul>
+                </div>
             </section>
             <!-- OUR TEAM -->
             <section class="team">
-                <h2 class="team__title">Наша команда</h2>
-                <ul class="team__list">
-                    <li class="team__list__item">
-                        <img class="team__list__img" src="./img/worker1.jpg" alt="Ігор Дем'яненко">
-                        <h4 class="team__list__title">Ігор Дем'яненко</h4>
-                        <p class="team__list__description">Product Designer</p>
-                    </li>
-                    <li class="team__list__item">
-                        <img class="team__list__img" src="./img/worker2.jpg" alt="Ольга Рєпіна">
-                        <h4 class="team__list__title">Ольга Рєпіна</h4>
-                        <p class="team__list__description">Frontend Developer</p>
-                    </li>
-                    <li class="team__list__item">
-                        <img class="team__list__img" src="./img/worker3.jpg" alt="Микола Тарасов">
-                        <h4 class="team__list__title">Микола Тарасов</h4>
-                        <p class="team__list__description">Marketing</p>
-                    </li>
-                    <li class="team__list__item">
-                        <img class="team__list__img" src="./img/worker4.jpg" alt="Михайло Єрмаков">
-                        <h4 class="team__list__title">Михайло Єрмаков</h4>
-                        <p class="team__list__description">UI Designer</p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 class="team__title">Наша команда</h2>
+                    <ul class="team__list">
+                        <li class="team__list__item">
+                            <img class="team__list__img" src="./img/worker1.jpg" alt="Ігор Дем'яненко">
+                            <h4 class="team__list__title">Ігор Дем'яненко</h4>
+                            <p class="team__list__description">Product Designer</p>
+                        </li>
+                        <li class="team__list__item">
+                            <img class="team__list__img" src="./img/worker2.jpg" alt="Ольга Рєпіна">
+                            <h4 class="team__list__title">Ольга Рєпіна</h4>
+                            <p class="team__list__description">Frontend Developer</p>
+                        </li>
+                        <li class="team__list__item">
+                            <img class="team__list__img" src="./img/worker3.jpg" alt="Микола Тарасов">
+                            <h4 class="team__list__title">Микола Тарасов</h4>
+                            <p class="team__list__description">Marketing</p>
+                        </li>
+                        <li class="team__list__item">
+                            <img class="team__list__img" src="./img/worker4.jpg" alt="Михайло Єрмаков">
+                            <h4 class="team__list__title">Михайло Єрмаков</h4>
+                            <p class="team__list__description">UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <!-- FOOTER -->
         <footer class="footer">
-            <a href="" class="footer-logo">WebStudio</a>
-            <address class="address">
-                <ul class="address-list">
-                    <li class="address-list-item"><a class="address-list-link" href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="address-list-item"><a class="address-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="address-list-item"><a class="address-list-link" href="tel:+380961111111">+380961111111</a></li>
-                </ul>
-            </address>
+            <div class="container">
+                <a href="" class="footer-logo">WebStudio</a>
+                <address class="address">
+                    <ul class="address-list">
+                        <li class="address-list-item"><a class="address-list-link" href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="address-list-item"><a class="address-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="address-list-item"><a class="address-list-link" href="tel:+380961111111">+380961111111</a></li>
+                    </ul>
+                </address>
+            </div>
         </footer>
     </body>
 </html>
