--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
     <body>
         <!-- HEADER -->
         <header class="header">
+            <div class="container">
                 <a class="header__logo" href="index.html">
                     WebStudio
                 </a>
@@ -41,75 +42,82 @@
                                 <h3>+38 096 111 11 11</h3>
                             </a>                        
                     </li>
-                </ul>     
+                </ul>
+            </div>
+                     
             <div class="header__line"></div>
         </header>
         <main>
             <section class="portfolio">
-                <ul class="portfolio__sort">
-                    <li><button class="portfolio__sort__button">Усі</button></li>
-                    <li><button class="portfolio__sort__button">Веб-сайти</button></li>
-                    <li><button class="portfolio__sort__button">Додатки</button></li>
-                    <li><button class="portfolio__sort__button">Дизайн</button></li>
-                    <li><button class="portfolio__sort__button">Маркетинг</button></li>
-                </ul>  
-                <ul class="portfolio__list">
-                    <li>
-                        <img src="./img/portfolio1.png" alt="Технокряк" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Технокряк</h3>
-                        <p class="portfolio__list__item__description">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio2.png" alt="Постер New Orlean vs Golden Star" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Постер New Orlean vs Golden Star</h3>
-                        <p class="portfolio__list__item__description">Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio3.png" alt="Ресторан Seafood" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Ресторан Seafood</h3>
-                        <p class="portfolio__list__item__description">Додаток</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio4.png" alt="Проєкт Prime" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Проєкт Prime</h3>
-                        <p class="portfolio__list__item__description">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio5.png" alt="Проєкт Boxes" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Проєкт Boxes</h3>
-                        <p class="portfolio__list__item__description">Додаток</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio6.png" alt="Inspiration has no Borders" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Inspiration has no Borders</h3>
-                        <p class="portfolio__list__item__description">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio7.png" alt="Видання Limited Edition" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Видання Limited Edition</h3>
-                        <p class="portfolio__list__item__description">Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio8.png" alt="Проєкт LAB" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Проєкт LAB</h3>
-                        <p class="portfolio__list__item__description">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./img/portfolio9.png" alt="Growing Business" class="portfolio__list__item__img">
-                        <h3 class="portfolio__list__item__title">Growing Business</h3>
-                        <p class="portfolio__list__item__description">Додаток</p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <ul class="portfolio__sort">
+                        <li><button class="portfolio__sort__button">Усі</button></li>
+                        <li><button class="portfolio__sort__button">Веб-сайти</button></li>
+                        <li><button class="portfolio__sort__button">Додатки</button></li>
+                        <li><button class="portfolio__sort__button">Дизайн</button></li>
+                        <li><button class="portfolio__sort__button">Маркетинг</button></li>
+                    </ul>  
+                    <ul class="portfolio__list">
+                        <li>
+                            <img src="./img/portfolio1.png" alt="Технокряк" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Технокряк</h3>
+                            <p class="portfolio__list__item__description">Веб-сайт</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio2.png" alt="Постер New Orlean vs Golden Star" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Постер New Orlean vs Golden Star</h3>
+                            <p class="portfolio__list__item__description">Дизайн</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio3.png" alt="Ресторан Seafood" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Ресторан Seafood</h3>
+                            <p class="portfolio__list__item__description">Додаток</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio4.png" alt="Проєкт Prime" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Проєкт Prime</h3>
+                            <p class="portfolio__list__item__description">Маркетинг</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio5.png" alt="Проєкт Boxes" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Проєкт Boxes</h3>
+                            <p class="portfolio__list__item__description">Додаток</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio6.png" alt="Inspiration has no Borders" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Inspiration has no Borders</h3>
+                            <p class="portfolio__list__item__description">Веб-сайт</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio7.png" alt="Видання Limited Edition" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Видання Limited Edition</h3>
+                            <p class="portfolio__list__item__description">Дизайн</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio8.png" alt="Проєкт LAB" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Проєкт LAB</h3>
+                            <p class="portfolio__list__item__description">Маркетинг</p>
+                        </li>
+                        <li>
+                            <img src="./img/portfolio9.png" alt="Growing Business" class="portfolio__list__item__img">
+                            <h3 class="portfolio__list__item__title">Growing Business</h3>
+                            <p class="portfolio__list__item__description">Додаток</p>
+                        </li>
+                    </ul>
+                </div>
+                
             </section>
         </main>
         <!-- FOOTER -->
         <footer class="footer">
-            <a href="" class="footer__logo">WebStudio</a>
+            <div class="container">
+                <a href="" class="footer__logo">WebStudio</a>
                 <ul class="footer__contacts">
                     <li><address class="footer__address"><a href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></address></li>
                     <li><a class="footer__mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="footer__tel" href="tel:+380961111111">+380961111111</a></li>
                 </ul>
+            </div>
         </footer>
     </body>
 </html>
