--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
         <!-- FOOTER -->
         <footer class="footer">
             <div class="container">
-                <a href="" class="footer-logo">WebStudio</a>
+                <a href="" class="footer__logo">WebStudio</a>
                 <address class="address">
-                    <ul class="address-list">
-                        <li class="address-list-item"><a class="address-list-link" href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="address-list-item"><a class="address-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="address-list-item"><a class="address-list-link" href="tel:+380961111111">+380961111111</a></li>
+                    <ul class="address__list">
+                        <li class="address__list__item"><a class="address__list__link" href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="address__list__item"><a class="address__list__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="address__list__item"><a class="address__list__link" href="tel:+380961111111">+380961111111</a></li>
                     </ul>
                 </address>
             </div>
