--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="header">
             <div class="container">
                 <div class="header__content__wrap">
-                <a class="header__logo" href="index.html">
+                <a class="header__logo" href="/">
                     Web<span>Studio</span>
                 </a>
             <nav class="nav">
