--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
             <section class="features">
                 <div class="container">
                     <ul class="features__list">
-                        <li class="features__list__item">
+                        <li class="features__list__item features__list__item1">
                             <h3 class="features__list__title">Увага до деталей</h3>
                             <p class="features__list__description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                         </li>
-                        <li class="features__list__item">
+                        <li class="features__list__item features__list__item2">
                             <h3 class="features__list__title">Пунктуальність</h3>
                             <p class="features__list__description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                         </li>
-                        <li class="features__list__item">
+                        <li class="features__list__item features__list__item3">
                             <h3 class="features__list__title">Планування</h3>
                             <p class="features__list__description">Так само консультація з широким активом значною мірою зумовлює.</p>
                         </li>
-                        <li class="features__list__item">
+                        <li class="features__list__item features__list__item4">
                             <h3 class="features__list__title">Сучасні технології</h3>
                             <p class="features__list__description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
