--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                     <h2 class="work__title">Чим ми займаємося</h2>                    
                     <ul class="work__list">
                         <li class="work__list__item">
-                            <img class="work__list__img" src="./img/whatwedo1.png" alt="Чим ми займаємося">
+                            <img class="work__list__img" src="./img/whatwedo1.jpg" alt="Чим ми займаємося">
                         </li>
                         <li class="work__list__item">
-                            <img class="work__list__img" src="./img/whatwedo2.png" alt="Чим ми займаємося">
+                            <img class="work__list__img" src="./img/whatwedo2.jpg" alt="Чим ми займаємося">
                         </li>
                         <li class="work__list__item">
-                            <img class="work__list__img" src="./img/whatwedo3.png" alt="Чим ми займаємося">
+                            <img class="work__list__img" src="./img/whatwedo3.jpg" alt="Чим ми займаємося">
                         </li>
                     </ul>
                 </div>
