--- a/portfolio.html
+++ b/portfolio.html
@@ -52,63 +52,63 @@
                     </ul>  
                     <ul class="portfolio__list">
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio1.png" alt="Технокряк" class="portfolio__list__img">
+                            <img src="./img/portfolio1.jpg" alt="Технокряк" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Технокряк</h3>
                                 <p class="portfolio__list__description">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio2.png" alt="Постер New Orlean vs Golden Star" class="portfolio__list__img">
+                            <img src="./img/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Постер New Orlean vs Golden Star</h3>
                                 <p class="portfolio__list__description">Дизайн</p>
                             </div>
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio3.png" alt="Ресторан Seafood" class="portfolio__list__img">
+                            <img src="./img/portfolio3.jpg" alt="Ресторан Seafood" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Ресторан Seafood</h3>
                                 <p class="portfolio__list__description">Додаток</p>
                             </div>
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio4.png" alt="Проєкт Prime" class="portfolio__list__img">
+                            <img src="./img/portfolio4.jpg" alt="Проєкт Prime" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Проєкт Prime</h3>
                                 <p class="portfolio__list__description">Маркетинг</p>
                             </div>
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio5.png" alt="Проєкт Boxes" class="portfolio__list__img">
+                            <img src="./img/portfolio5.jpg" alt="Проєкт Boxes" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Проєкт Boxes</h3>
                                 <p class="portfolio__list__description">Додаток</p>
                             </div>                        
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio6.png" alt="Inspiration has no Borders" class="portfolio__list__img">
+                            <img src="./img/portfolio6.jpg" alt="Inspiration has no Borders" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Inspiration has no Borders</h3>
                                 <p class="portfolio__list__description">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio7.png" alt="Видання Limited Edition" class="portfolio__list__img">
+                            <img src="./img/portfolio7.jpg" alt="Видання Limited Edition" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Видання Limited Edition</h3>
                                 <p class="portfolio__list__description">Дизайн</p>
                             </div>
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio8.png" alt="Проєкт LAB" class="portfolio__list__img">
+                            <img src="./img/portfolio8.jpg" alt="Проєкт LAB" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Проєкт LAB</h3>
                                 <p class="portfolio__list__description">Маркетинг</p>
                             </div>
                         </li>
                         <li class="portfolio__list__item">
-                            <img src="./img/portfolio9.png" alt="Growing Business" class="portfolio__list__img">
+                            <img src="./img/portfolio9.jpg" alt="Growing Business" class="portfolio__list__img">
                             <div class="portofolio__list__container">
                                 <h3 class="portfolio__list__title">Growing Business</h3>
                                 <p class="portfolio__list__description">Додаток</p>
