--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
                 </ul>    
             </nav>
                 <ul class="contacts__list">
-                    <li class="contacts__list__item"><a href="mailto:info@devstudio.com" class="header__mail contacts__list__link">info@devstudio.com</a></li>
-                    <li class="contacts__list__item"><a href="tel:+380961111111" class="header__tel contacts__list__link">+38 096 111 11 11</a></li>
+                    <li class="contacts__list__item"><a href="mailto:info@devstudio.com" class="header__mail contacts__list__link">
+                        <svg width="16px" height="12px">
+                            <use class="contacts__item__icon" href="./svg/symbol-defs.svg#icon-email"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a></li>
+                    <li class="contacts__list__item"><a href="tel:+380961111111" class="header__tel contacts__list__link">
+                        <svg width="10" height="16">
+                            <use class="contacts__item__icon" href="./svg/symbol-defs.svg#icon-tel"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a></li>
                 </ul>    
                 </div>
             </div>  
